--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.19MB/s(Youtube:不良林), server: vs.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: vs.2046.gq, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-4.09MB/s(Youtube:不良林), server: 103.173.155.72, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-5.79MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.90MB/s(Youtube:不良林), server: 107.173.111.182, port: 443, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-4.89MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20715, type: trojan, password: 5abd9b83-295e-35e4-b0b3-deed61eea35f, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-2.96MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-713.8KB/s(Youtube:不良林), server: jgwcc2.gaox.ml, port: 443, type: trojan, password: 9c822f05-cfdc-479a-9534-60f3d4127435, sni: jgwcc2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-3.14MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.62MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30080, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 未知国家-940.4KB/s(Youtube:不良林), server: 104.19.3.36, port: 443, type: vmess, uuid: 9e6ceeff-2546-3690-ac00-6fcdf31dec94, alterId: 1, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chcar, ws-headers: {Host: v2fly.samrt.website}}
   - {name: 🇺🇸 美国-5.13MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.08MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇬🇧 英国-3.08MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.08MB/s(Youtube:不良林), server: 46.232.120.4, port: 443, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-9.07MB/s(Youtube:不良林), server: 139.162.62.46, port: 444, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-8.17MB/s(Youtube:不良林), server: 114.40.164.142, port: 444, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-337.5KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-21.24MB/s(Youtube:不良林), server: 20.239.15.148, port: 13405, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.09MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.90MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.89MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-713.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.62MB/s(Youtube:不良林)
+      - 未知国家-940.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-9.07MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.17MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-337.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-21.24MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.09MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.90MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.89MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-713.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.62MB/s(Youtube:不良林)
+      - 未知国家-940.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-9.07MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.17MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-337.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-21.24MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.09MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.90MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.89MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-713.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.62MB/s(Youtube:不良林)
+      - 未知国家-940.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-9.07MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.17MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-337.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-21.24MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-4.89MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.17MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.09MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.90MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.89MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-713.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.62MB/s(Youtube:不良林)
+      - 未知国家-940.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-9.07MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.17MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-337.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-21.24MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.09MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.90MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.89MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-713.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.62MB/s(Youtube:不良林)
+      - 未知国家-940.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-9.07MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.17MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-337.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-21.24MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.09MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.90MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.89MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-713.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.62MB/s(Youtube:不良林)
+      - 未知国家-940.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-9.07MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.17MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-337.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-21.24MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
-      - 🇻🇳 越南-4.09MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-5.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.90MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.89MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.69MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.96MB/s(Youtube:不良林)
-      - 🇺🇸 美国-713.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.62MB/s(Youtube:不良林)
+      - 未知国家-940.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.13MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.08MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-9.07MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-8.17MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-337.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-21.24MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
