--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇻🇳 越南-4.43MB/s(Youtube:不良林), server: 103.173.255.228, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-10.72MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-3.31MB/s(Youtube:不良林), server: 172.104.244.36, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-11.64MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30170, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-11.54MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20727, type: trojan, password: 5abd9b83-295e-35e4-b0b3-deed61eea35f, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.55MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30080, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-22.40MB/s(Youtube:不良林), server: 20.239.15.148, port: 13405, type: trojan, password: 8167c2ee-a819-4bfc-ba74-1e4c565ce568, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-4.26MB/s(Youtube:不良林), server: 103.173.255.127, port: 28000, type: trojan, password: 2cee2f05-9351-4a6d-9f80-ff859a54a0b3, skip-cert-verify: true}
   - {name: 🇬🇧 英国-2.14MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
   - {name: 🇺🇸 美国-5.16MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
   - {name: 未知国家-2.56MB/s(Youtube:不良林), server: 104.19.3.36, port: 443, type: vmess, uuid: 9e6ceeff-2546-3690-ac00-6fcdf31dec94, alterId: 1, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chcar, ws-headers: {Host: v2fly.samrt.website}}
   - {name: 🇷🇺 俄罗斯联邦-4.00MB/s(Youtube:不良林), server: ru1.nodegz.top, port: 443, type: trojan, password: 0d15e40f-7093-392f-99fa-1bf845050bfe, sni: ru1.nodegz.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.86MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30130, type: trojan, password: d19e6167-09b4-431b-803b-77556c7f0aba, sni: gzyd1.52147.top, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇻🇳 越南-4.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.72MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.64MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-22.40MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.26MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
       - 未知国家-2.56MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-4.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.86MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇻🇳 越南-4.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.72MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.64MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-22.40MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.26MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
       - 未知国家-2.56MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-4.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.86MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇻🇳 越南-4.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.72MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.64MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-22.40MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.26MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
       - 未知国家-2.56MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-4.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.86MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-11.54MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇻🇳 越南-4.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.72MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.64MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-22.40MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.26MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
       - 未知国家-2.56MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-4.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.86MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇻🇳 越南-4.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.72MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.64MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-22.40MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.26MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
       - 未知国家-2.56MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-4.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.86MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇻🇳 越南-4.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.72MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.64MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-22.40MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.26MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
       - 未知国家-2.56MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-4.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.86MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇻🇳 越南-4.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.72MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.64MB/s(Youtube:不良林)
+      - 🇭🇰 香港-11.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-22.40MB/s(Youtube:不良林)
+      - 🇻🇳 越南-4.26MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.14MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.84MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.16MB/s(Youtube:不良林)
       - 未知国家-2.56MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-4.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.86MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
